--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "script-launcher-source",
+  "name": "npm-menu-source",
   "version": "0.0.0",
   "description": "Script launcher repo root package.json, used mainly to execute build scripts. This package is not published to npm.",
   "main": "",
   "scripts": {
-    "start": "launch",
-    "postinstall": "launch"
+    "start":"ts-node src/npm-menu.ts",
+    "build": "rimraf dist && mkdir dist && tsc --build  && copyfiles  -f ./src/*.json  dist && copyfiles  -f ./src/*.md  dist &&  copyfiles  -a -f ./src/LICENSE  dist && copyfiles  -f ./src/bin/npm-menu.js  dist/bin"
+     
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:chanzo/script-launcher.git"
+    "url": "git@github.com:templated-ui/npm-menu.git"
   },
-  "author": "Chanzo Wazi",
+  "author": "templated-ui",
   "license": "MIT",
   "dependencies": {
     "cross-spawn": "^6.0.5",
@@ -27,7 +28,11 @@
     "@types/inquirer": "^6.0.3",
     "@types/node": "^12.0.3",
     "@types/pretty-time": "^1.1.0",
-    "script-launcher": "^1.9.1",
+    "copyfiles": "^2.1.0",
+    "cp": "^0.2.0",
+    "cpy-cli": "^2.0.0",
+    "rimraf": "^2.6.3",
+    "npm-menu": "^1.9.1",
     "ts-node": "^8.2.0",
     "tslint": "^5.16.0",
     "typescript": "^3.5.1"
